gcc/testsuite/g++.old-deja/g++.pt/overload5.C
// { dg-do assemble  }

template <class T> void foo();	// { dg-message "" } candidate

void (*bar)() = foo<void>;
void (*baz)() = foo; // { dg-error "" } can't deduce T
